--- a/hackathon-dashboard.ipynb
+++ b/hackathon-dashboard.ipynb
@@ -115,27 +115,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "out2a = widgets.Output()\n",
+    "out2b = widgets.Output()\n",
+    "\n",
+    "output2 = widgets.HBox([out2a, out2b])\n",
+    "text2 = widgets.Text()\n",
+    "\n",
     "def handle_submit2(sender):\n",
     "    example = hackathon_functionality.get_disease_from_gene(text2.value)\n",
-    "    with out2:\n",
-    "        out2.clear_output()\n",
-    "        for e in example:\n",
-    "            my_print_lib.print_disease(e)\n",
+    "    with out2a:\n",
+    "        out2a.clear_output()\n",
+    "        hackathon_functionality.print_diseases_with_gene(example)\n",
+    "    with out2b:\n",
+    "        out2b.clear_output()\n",
+    "        hackathon_functionality.print_gene(example)\n",
     "    \n",
-    "text2 = widgets.Text()\n",
-    "text2.on_submit(handle_submit2)\n",
     "\n",
-    "out2 = widgets.Output()\n",
+    "text2.on_submit(handle_submit2)\n",
     "\n",
     "tag2Title = widgets.HTML(\n",
     "    value=\"<div><h2>Enter the gene symbol to view the diseases that associated with the gene</h2></div>\",\n",
     ")\n",
-    "children2 = widgets.VBox([tag2Title, text2, out2])"
+    "children2 = widgets.VBox([tag2Title, text2, output2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,13 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3961d52faca04aaeb082a9620b3c672d",
+       "model_id": "58a9609132de42ada80e97fc44ae8000",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
